fix popover bug: wrap #picker in .picker-container and put #picker back there before popover("hide")

--- a/app/assets/stylesheets/sites.scss
+++ b/app/assets/stylesheets/sites.scss
@@ -55,7 +55,7 @@
   text-align: right;
 }
 
-#picker {
+.picker-container {
   display: none;
 }
 #chart_container .popover {
